--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-image: otrs5ci
+image: registry.znuny.com/znuny/docker-otrs5ci:latest
 
 stages:
   - deploy
 
-job_deploy_otrs_Znuny4OTRSPasswordPolicy:
+deploy:
   stage: deploy
   script:
     - sh /sync_repo.sh git@github.com:znuny/Znuny4OTRS-PasswordPolicy.git
